Fixed where instructions are behind food image?

--- a/Meal_Backend/recipes/static/recipes/style.css
+++ b/Meal_Backend/recipes/static/recipes/style.css
@@ -282,6 +282,7 @@
     box-shadow: 5px 10px;
     margin: 30px;
     float: right;
+    display: flex;
 }
 .Desc{
     height: fit-content;
